unpackaged/main/default/objects/Asset/fields/Access_Server_Details__c.field-meta.xml
<CustomField>
    <fullName>Access_Server_Details__c</fullName>
    <label>Access</label>
    <length>255</length>
    <type>Text</type>
</CustomField>