unpackaged/main/default/objects/Asset/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Laptop/Workstation</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Mobile Phone</fullName>
            </value>
            <value>
                <fullName>Other Devices</fullName>
            </value>
            <value>
                <fullName>Physical</fullName>
            </value>
            <value>
                <fullName>Rack</fullName>
            </value>
            <value>
                <fullName>Switch/Router</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>