unpackaged/main/default/objects/Asset/fields/Audit_Checked__c.field-meta.xml
<CustomField>
    <fullName>Audit_Checked__c</fullName>
    <label>Audit Checked</label>
    <type>Date</type>
</CustomField>