unpackaged/main/default/objects/Asset/fields/AutoQuantityRemaining__c.field-meta.xml
<CustomField>
    <fullName>AutoQuantityRemaining__c</fullName>
    <description>Calculates the quantity of training course remaining to this account/opportunity</description>
    <formula>Quantity- TRIGQuantityUsed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>