unpackaged/main/default/objects/Asset/fields/Care_and_Repair_Form_Signed__c.field-meta.xml
<CustomField>
    <fullName>Care_and_Repair_Form_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Care and Repair Form Signed</label>
    <type>Checkbox</type>
</CustomField>