unpackaged/main/default/objects/Asset/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>Industrial Design / Styling</fullName>
            </value>
            <value>
                <fullName>CAM</fullName>
            </value>
            <value>
                <fullName>CAE</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>Facility Design</fullName>
            </value>
            <value>
                <fullName>ERP</fullName>
            </value>
            <value>
                <fullName>Workstation</fullName>
            </value>
            <value>
                <fullName>Server</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Backup</fullName>
            </value>
            <value>
                <fullName>Virtualisation</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>Outsourced IT</fullName>
            </value>
            <value>
                <fullName>Support Contract</fullName>
            </value>
            <value>
                <fullName>Visualisation</fullName>
            </value>
            <value>
                <fullName>ECAD</fullName>
            </value>
            <value>
                <fullName>Digital Manufacturing (Not CAM)</fullName>
            </value>
            <value>
                <fullName>Product Cost Management</fullName>
            </value>
            <value>
                <fullName>Secure Data Transfer</fullName>
            </value>
            <value>
                <fullName>AEC – Architectural/Construction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>