unpackaged/main/default/objects/Asset/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <defaultValue>("Solutions")</defaultValue>
    <label>Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JLR</fullName>
            </value>
            <value>
                <fullName>Solutions</fullName>
                <default>true</default>
                <label>Solutions</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>