unpackaged/main/default/objects/Asset/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <description>Condition of the Asset - Please add context if required in the internal notes field below</description>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A - New</fullName>
            </value>
            <value>
                <fullName>B - Very Good</fullName>
            </value>
            <value>
                <fullName>C - Acceptable</fullName>
            </value>
            <value>
                <fullName>D - Poor</fullName>
            </value>
            <value>
                <fullName>E - Spares &amp; Repairs</fullName>
            </value>
            <value>
                <fullName>F - Scrap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>