unpackaged/main/default/objects/Asset/fields/Graphics__c.field-meta.xml
<CustomField>
    <fullName>Graphics__c</fullName>
    <label>Graphics</label>
    <length>20</length>
    <type>Text</type>
</CustomField>