unpackaged/main/default/objects/Asset/fields/Hard_Drive__c.field-meta.xml
<CustomField>
    <fullName>Hard_Drive__c</fullName>
    <label>Hard Drive</label>
    <length>150</length>
    <type>Text</type>
</CustomField>