unpackaged/main/default/objects/Asset/fields/Hard_Drive_Warranty_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Hard_Drive_Warranty_End_Date__c</fullName>
    <label>Warranty End Date</label>
    <type>Date</type>
</CustomField>