unpackaged/main/default/objects/Asset/fields/IMEI__c.field-meta.xml
<CustomField>
    <fullName>IMEI__c</fullName>
    <description>Mobile Phone IMEI Number</description>
    <inlineHelpText>Mobile Phone IMEI Number</inlineHelpText>
    <label>IMEI</label>
    <length>16</length>
    <type>Text</type>
</CustomField>