unpackaged/main/default/objects/Asset/fields/Internal_Notes174__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes174__c</fullName>
    <description>Enter the details of any other information within the field</description>
    <label>Internal Notes</label>
    <type>TextArea</type>
</CustomField>