unpackaged/main/default/objects/Asset/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <description>IP Address of the Server</description>
    <label>IP Address</label>
    <length>15</length>
    <type>Text</type>
</CustomField>