unpackaged/main/default/objects/Asset/fields/Licence_Informationv1__c.field-meta.xml
<CustomField>
    <fullName>Licence_Informationv1__c</fullName>
    <label>Licence Information</label>
    <type>TextArea</type>
</CustomField>