unpackaged/main/default/objects/Asset/fields/Machine_Name__c.field-meta.xml
<CustomField>
    <fullName>Machine_Name__c</fullName>
    <label>Host Name</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>