unpackaged/main/default/objects/Asset/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <label>Make</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Asset_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>DELL</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>Samsung</fullName>
            </value>
            <value>
                <fullName>Lenovo</fullName>
            </value>
            <value>
                <fullName>BENQ</fullName>
                <isActive>false</isActive>
                <label>BENQ</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>