unpackaged/main/default/objects/Asset/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Make__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>250 G</fullName>
            </value>
            <value>
                <fullName>250 G5</fullName>
            </value>
            <value>
                <fullName>250 G6</fullName>
            </value>
            <value>
                <fullName>Elitebook 725</fullName>
            </value>
            <value>
                <fullName>Elitebook 725 G2</fullName>
            </value>
            <value>
                <fullName>Elitebook 8760w</fullName>
            </value>
            <value>
                <fullName>Elitebook 8770w</fullName>
            </value>
            <value>
                <fullName>EliteDesk 800 G4</fullName>
            </value>
            <value>
                <fullName>S7</fullName>
                <label>Galaxy S7</label>
            </value>
            <value>
                <fullName>iPad Pro</fullName>
            </value>
            <value>
                <fullName>iPhone 6</fullName>
            </value>
            <value>
                <fullName>6 Plus</fullName>
                <label>iPhone 6 Plus</label>
            </value>
            <value>
                <fullName>iPhone 6s</fullName>
            </value>
            <value>
                <fullName>iPhone 7</fullName>
            </value>
            <value>
                <fullName>7 Plus</fullName>
                <label>iPhone 7 Plus</label>
            </value>
            <value>
                <fullName>iPhone 8</fullName>
            </value>
            <value>
                <fullName>8 Plus</fullName>
                <label>iPhone 8 Plus</label>
            </value>
            <value>
                <fullName>iPhone SE</fullName>
            </value>
            <value>
                <fullName>iPhone X</fullName>
            </value>
            <value>
                <fullName>XR</fullName>
                <label>iPhone XR</label>
            </value>
            <value>
                <fullName>XS</fullName>
                <label>iPhone XS</label>
            </value>
            <value>
                <fullName>Latitude 3340</fullName>
            </value>
            <value>
                <fullName>Latitude 3540</fullName>
            </value>
            <value>
                <fullName>Latitude 7390</fullName>
            </value>
            <value>
                <fullName>Latitude E7250</fullName>
            </value>
            <value>
                <fullName>Latitude E7440</fullName>
            </value>
            <value>
                <fullName>Latitude E7450</fullName>
            </value>
            <value>
                <fullName>Macbook Air</fullName>
            </value>
            <value>
                <fullName>Macbook Pro 13</fullName>
            </value>
            <value>
                <fullName>Precision 7510</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>