unpackaged/main/default/objects/Asset/fields/Office_Location__c.field-meta.xml
<CustomField>
    <fullName>Office_Location__c</fullName>
    <label>Office Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brentwood</fullName>
            </value>
            <value>
                <fullName>JLR Gaydon</fullName>
            </value>
            <value>
                <fullName>Whitley</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>