unpackaged/main/default/objects/Asset/fields/Operating_System__c.field-meta.xml
<CustomField>
    <fullName>Operating_System__c</fullName>
    <label>Operating System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Microsoft Windows 10</fullName>
            </value>
            <value>
                <fullName>Apple iOS</fullName>
            </value>
            <value>
                <fullName>Apple macOS</fullName>
            </value>
            <value>
                <fullName>Linux Operating System</fullName>
            </value>
            <value>
                <fullName>Microsoft Windows 7</fullName>
            </value>
            <value>
                <fullName>Server 2012 R2 Standard (64bit)</fullName>
            </value>
            <value>
                <fullName>Server 2012 R2 Datacenter (64bit)</fullName>
            </value>
            <value>
                <fullName>Server 2008 R2 (64bit)</fullName>
            </value>
            <value>
                <fullName>Server 2012 (64bit)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>