unpackaged/main/default/objects/Asset/fields/Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Number__c</fullName>
    <description>Asset Product Number</description>
    <label>Product Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>