unpackaged/main/default/objects/Asset/fields/RAM__c.field-meta.xml
<CustomField>
    <fullName>RAM__c</fullName>
    <label>RAM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>