unpackaged/main/default/objects/Asset/fields/Secondary_Hard_Drive__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Hard_Drive__c</fullName>
    <label>Secondary Hard Drive</label>
    <length>150</length>
    <type>Text</type>
</CustomField>