unpackaged/main/default/objects/Asset/fields/Service_Tag_SN__c.field-meta.xml
<CustomField>
    <fullName>Service_Tag_SN__c</fullName>
    <label>Service Tag / SN</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>