unpackaged/main/default/objects/Asset/fields/SubCategory__c.field-meta.xml
<CustomField>
    <fullName>SubCategory__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>3ds max</fullName>
            </value>
            <value>
                <fullName>Abacus</fullName>
            </value>
            <value>
                <fullName>Acer</fullName>
            </value>
            <value>
                <fullName>Actify</fullName>
            </value>
            <value>
                <fullName>Alias</fullName>
            </value>
            <value>
                <fullName>AlphaCAM</fullName>
            </value>
            <value>
                <fullName>Altair Hypermesh</fullName>
            </value>
            <value>
                <fullName>Altium</fullName>
            </value>
            <value>
                <fullName>ANSA</fullName>
            </value>
            <value>
                <fullName>Ansys</fullName>
            </value>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>aPriori</fullName>
            </value>
            <value>
                <fullName>Aras</fullName>
            </value>
            <value>
                <fullName>Arrow</fullName>
            </value>
            <value>
                <fullName>Artisan (I-deas)</fullName>
            </value>
            <value>
                <fullName>ATOS</fullName>
            </value>
            <value>
                <fullName>AutoCAD</fullName>
            </value>
            <value>
                <fullName>AutoCAD Architecture</fullName>
            </value>
            <value>
                <fullName>AutoCAD Electrical</fullName>
            </value>
            <value>
                <fullName>AutoCAD LT</fullName>
            </value>
            <value>
                <fullName>Autodesk Direct Connect</fullName>
            </value>
            <value>
                <fullName>Autodesk PLM360</fullName>
            </value>
            <value>
                <fullName>Autodesk Simulation</fullName>
            </value>
            <value>
                <fullName>Autodesk Vault</fullName>
            </value>
            <value>
                <fullName>Bentley Micro Station</fullName>
            </value>
            <value>
                <fullName>BIM360</fullName>
            </value>
            <value>
                <fullName>BlueArc</fullName>
            </value>
            <value>
                <fullName>Bobcad</fullName>
            </value>
            <value>
                <fullName>Boothroyd Dewhurst</fullName>
            </value>
            <value>
                <fullName>BOXX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>