unpackaged/main/default/objects/Asset/fields/Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Number__c</fullName>
    <description>Telephone Number</description>
    <inlineHelpText>Assigned Telephone Number</inlineHelpText>
    <label>Telephone Number</label>
    <length>13</length>
    <type>Text</type>
</CustomField>