unpackaged/main/default/objects/Asset/fields/TRIGQuantityUsed__c.field-meta.xml
<CustomField>
    <fullName>TRIGQuantityUsed__c</fullName>
    <label>Quantity Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>