unpackaged/main/default/objects/Asset/fields/VPN_Installed__c.field-meta.xml
<CustomField>
    <fullName>VPN_Installed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to confirm that VPN has been installed on Majenta Hardware.</description>
    <inlineHelpText>Tick to confirm VPN has been installed</inlineHelpText>
    <label>VPN Installed</label>
    <type>Checkbox</type>
</CustomField>