unpackaged/main/default/objects/Asset/fields/Wiped_DBAN__c.field-meta.xml
<CustomField>
    <fullName>Wiped_DBAN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the machine been Wiped/DBAN'd?</description>
    <label>Wiped/DBAN</label>
    <type>Checkbox</type>
</CustomField>