unpackaged/main/default/objects/Asset/fields/Wireless__c.field-meta.xml
<CustomField>
    <fullName>Wireless__c</fullName>
    <label>Wireless</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>