unpackaged/main/default/objects/Asset/recordTypes/Computer_Hardware.recordType-meta.xml
<RecordType>
    <fullName>Computer_Hardware</fullName>
    <active>true</active>
    <description>Align the Computer Assets that Users have been assigned whilst in the employment of Majenta</description>
    <label>Computer Hardware</label>
</RecordType>