unpackaged/main/default/objects/Asset/recordTypes/Mobile.recordType-meta.xml
<RecordType>
    <fullName>Mobile</fullName>
    <active>true</active>
    <description>Align the Mobile Phone Assets that Users have been assigned whilst in the employment of Majenta</description>
    <label>Mobile</label>
</RecordType>