unpackaged/main/default/objects/Asset/recordTypes/Server.recordType-meta.xml
<RecordType>
    <fullName>Server</fullName>
    <active>true</active>
    <description>Majenta Server Assets</description>
    <label>Server</label>
</RecordType>