unpackaged/main/default/objects/Asset/recordTypes/User_Asset_Management.recordType-meta.xml
<RecordType>
    <fullName>User_Asset_Management</fullName>
    <active>true</active>
    <description>Align the Assets that Users have been assigned whilst in the employment of Majenta</description>
    <label>Majenta Asset Management</label>
</RecordType>