unpackaged/main/default/objects/Asset/validationRules/VR01_ASSET_QuantityUsedToLarge.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_ASSET_QuantityUsedToLarge</fullName>
    <active>true</active>
    <errorConditionFormula>TRIGQuantityUsed__c&gt;Quantity</errorConditionFormula>
    <errorDisplayField>TRIGQuantityUsed__c</errorDisplayField>
    <errorMessage>Quantity used is larger than the original quantity, reduce quantity used</errorMessage>
</ValidationRule>