unpackaged/main/default/objects/Asset/listViews/AllAssets.listView-meta.xml
<ListView>
    <fullName>AllAssets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>User_Name__c</columns>
    <columns>Service_Tag_SN__c</columns>
    <columns>ASSET.STATUS</columns>
    <columns>Machine_Name__c</columns>
    <columns>Operating_System__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Assets</label>
</ListView>