unpackaged/main/default/objects/Asset/listViews/Assets_with_accounts.listView-meta.xml
<ListView>
    <fullName>Assets_with_accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Contract__c</columns>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.PRICE</columns>
    <columns>ASSET.CURRENCY_ISO_CODE</columns>
    <columns>ASSET.QUANTITY</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ASSET.USAGE_END_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Assets with accounts</label>
</ListView>