unpackaged/main/default/objects/Asset/listViews/Majenta_I_T_Hardware.listView-meta.xml
<ListView>
    <fullName>Majenta_I_T_Hardware</fullName>
    <columns>ASSET.NAME</columns>
    <columns>Service_Tag_SN__c</columns>
    <columns>Machine_Name__c</columns>
    <columns>User_Name__c</columns>
    <columns>ASSET.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset.Computer_Hardware,Asset.Mobile,Asset.Server</value>
    </filters>
    <label>Majenta I.T. Hardware</label>
    <sharedTo>
        <group>Solutions_IT</group>
    </sharedTo>
</ListView>