unpackaged/main/default/objects/Asset/listViews/Majenta_Mobile_Assets.listView-meta.xml
<ListView>
    <fullName>Majenta_Mobile_Assets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>User_Name__c</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>IMEI__c</columns>
    <columns>Department__c</columns>
    <columns>Office_Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset.Mobile</value>
    </filters>
    <label>Majenta Mobile Assets</label>
</ListView>